# classifier-training

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  pixi.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lint.yml  release.yml  test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-and-data-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-model-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-callbacks-and-onnx-export/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-training-configuration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-infrastructure/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
configs/: synthetic_default.yaml  synthetic_targeted.yaml
experiments/: augmentation_sweep_results.md
scripts/: annotate_metadata.py  build-docker.sh  cloud-build.sh  evaluate_classifiers.py  generate_synthetic.py  generate_synthetic_targeted.py  metadata_stats.py
src/classifier_training/: __init__.py  config.py  losses.py  train.py  types.py
src/classifier_training/callbacks/: __init__.py  confusion_matrix.py  ema.py  model_info.py  onnx_export.py  plotting.py  sampler.py  statistics.py  visualization.py
src/classifier_training/conf/: train_basketball_resnet18.yaml  train_jersey_ocr_resnet18.yaml  train_jersey_ocr_resnet18_local.yaml  train_jersey_ocr_smolvlm2.yaml
src/classifier_training/data/: __init__.py  cache_dataset.py  datamodule.py  dataset.py  sampler.py  utils.py  vlm_collator.py  vlm_datamodule.py  vlm_dataset.py
src/classifier_training/inference/: __init__.py  base.py  onnx_inferencer.py  vlm_inferencer.py
src/classifier_training/io/: __init__.py  annotation.py
src/classifier_training/models/: __init__.py  base.py  resnet.py  smolvlm2.py
src/classifier_training/schemas/: __init__.py  annotation.py  info.py
src/classifier_training/synthetic/: __init__.py  renderer.py  writer.py
src/classifier_training/transforms/: __init__.py  conversion.py  degradation.py
src/classifier_training/utils/: __init__.py  (+1 more)
tests/: conftest.py  test_annotate_metadata.py  test_annotation_writer.py  test_cache_dataset.py  test_callbacks_ema.py  test_callbacks_integration.py  test_callbacks_observability.py  test_callbacks_onnx_export.py  test_classification_annotation.py  test_data_utils.py  test_datamodule.py  test_dataset.py  test_metadata_stats.py  test_model.py  test_onnx_inferencer.py  test_package.py  test_sampler_config.py  test_smolvlm2_model.py  test_synthetic.py  test_train_config.py  test_transforms.py  test_types_config.py  test_vlm_collator.py  test_vlm_dataset.py  test_vlm_inferencer.py
(+34 files in other folders)
