[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "classifier_training"
version = "0.0.1"
description = "Basketball jersey number classifier training"
authors = [{name = "Enrique G. Ortiz", email = "ortizeg@gmail.com"}]
license = {text = "Apache-2.0"}
dependencies = [
    "lightning",
    "loguru",
    "numpy<2.0.0",
    "pydantic>=2.0",
    "torch",
    "torchvision",
    "Pillow",
    "rich",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "S",    # bandit (security)
    "A",    # builtins
    "C4",   # comprehensions
    "RUF",  # ruff-specific
]
ignore = ["N812"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["classifier_training"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "lightning.*",
    "pydantic.*",
    "PIL.*",
    "loguru.*",
    "numpy.*",
    "rich.*",
]
ignore_missing_imports = true
